Add endpoint DELETE /catalog/items/{itemId}/images; Create class CloudinaryClient to encapsulate all methods which directly interact with Cloudinary; Fix StackOverflowError caused by circular dependency in @Data between Category and Subcategory, Item and ItemImage